# RealFunctionOptimization

./: CMakeLists.txt  compile_win.bat
src/: CMakeLists.txt
src/RealFunctionOptimizationLib/: CMakeLists.txt  Common.h
src/RealFunctionOptimizationLib/AbstractFactories/: DifferentiableFunctionAndFunctionalFactory.h  FunctionAndFunctionalAbstractFactory.h  FunctionAndFunctionalFactory.h
src/RealFunctionOptimizationLib/Factories/FunctionFactories/: DifferentiableFunctionFactory.h  FunctionFactory.h  InterpolationCubicSplineFactory.h  LineFunctionFactory.h  PiecewiseLineFunctionFactory.h  PolynomialFunctionFactory.h
src/RealFunctionOptimizationLib/Factories/FunctionalFactories/: DifferentiableFunctionalFactory.h  FunctionalFactory.h  L1NormDifferenceFunctionalFactory.h  L2NormDifferenceFunctionalFactory.h  LInfNormDifferenceFunctionalFactory.h  MonteCarloIntegralFunctionalFactory.h
src/RealFunctionOptimizationLib/Functionals/: IFunctional.h  L1NormDifferenceFunctional.cpp  L1NormDifferenceFunctional.h  L2NormDifferenceFunctional.cpp  L2NormDifferenceFunctional.h  LInfNormDifferenceFunctional.cpp  LInfNormDifferenceFunctional.h  MonteCarloIntegralFunctional.cpp  MonteCarloIntegralFunctional.h
src/RealFunctionOptimizationLib/Functionals/Factories/: IFunctionalFactory.h  L1NormDifferenceFunctionalFactory.h  L2NormDifferenceFunctionalFactory.h  LInfNormDifferenceFunctionalFactory.h  MonteCarloIntegralFunctionalFactory.h
src/RealFunctionOptimizationLib/Functions/: IFunction.h  InterpolationCubicSpline.cpp  InterpolationCubicSpline.h  InterpolationSplineBase.cpp  InterpolationSplineBase.h  LineFunction.cpp  LineFunction.h  LineFunctionBase.cpp  LineFunctionBase.h  PiecewiseLineFunction.cpp  PiecewiseLineFunction.h  PolynomialFunction.cpp  PolynomialFunction.h  SplineBase.cpp  SplineBase.h
src/RealFunctionOptimizationLib/Functions/CubicSpline/: CubicSpline.cpp  CubicSpline.h
src/RealFunctionOptimizationLib/Functions/CubicSpline/Impl/: CubicSplineImpl.h  InterpolationCubicSplineImpl.cpp  InterpolationCubicSplineImpl.h  SmoothingCubicSplineImpl.cpp  SmoothingCubicSplineImpl.h
src/RealFunctionOptimizationLib/Functions/CubicSpline/Impl/Factories/: ICubicSplineImplFactory.h  InterpolationCubicSplineImplFactory.h  SmoothingCubicSplineImplFactory.h
src/RealFunctionOptimizationLib/Functions/Factories/: CubicSplineFactory.h  IDifferentiableFunctionFactory.h  IFunctionFactory.h  InterpolationCubicSplineFactory.h  LineFunctionFactory.h  PiecewiseLineFunctionFactory.h  PolynomialFunctionFactory.h
src/RealFunctionOptimizationLib/Optimizators/: GaussNewtonOptimizator.cpp  GaussNewtonOptimizator.h  GradientDescentOptimizator.cpp  GradientDescentOptimizator.h  IOptimizator.h  MonteCarloOptimizator.cpp  MonteCarloOptimizator.h
src/RealFunctionOptimizationLib/Optimizators/Builders/: GaussNewtonOptimizatorBuilder.cpp  GaussNewtonOptimizatorBuilder.h  GradientDescentOptimizatorBuilder.cpp  GradientDescentOptimizatorBuilder.h  IOptimizatorBuilder.h  MonteCarloOptimizatorBuilder.cpp  MonteCarloOptimizatorBuilder.h
src/Sample/: CMakeLists.txt
src/Tests/: CMakeLists.txt  main.cpp
src/Tests/Functionals/: L1NormDifferenceFunctionalTests.cpp  L2NormDifferenceFunctionalTests.cpp  LInfNormDifferenceFunctionalTests.cpp  MockFunctions.h  MonteCarloIntegralFunctionalTests.cpp
src/Tests/Functions/: InterpolationSplineBaseTests.cpp  LineFunctionBaseTests.cpp  LineFunctionTests.cpp  PolynomialFunctionTests.cpp  SplineBaseTests.cpp
src/Tests/Optimizators/: GaussNewtonOptimizatorTests.cpp  GradientDescentOptimizatorTests.cpp  MonteCarloOptimizatorTests.cpp  OptimizatorsTestsCommon.h
